Add package-info for packages that except those contain Mixins and interfaces